--- a/package.yaml
+++ b/package.yaml
@@ -43,14 +43,17 @@ executables:
     dependencies:
     - mle-ue2
 
-tests:
-  mle-ue2-test:
-    main:                Spec.hs
-    source-dirs:         test
+  mle-ue2-bench:
+    main: Main.hs
+    source-dirs: bench
     ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
+      - -threaded
+      - -rtsopts
+      - -with-rtsopts=-N
+      - -optc-ffast-math
+      - -optc-O3
+      - -O3
     dependencies:
-    - mle-ue2
-    - hspec
+      - mle-ue2
+      - criterion
+      - deepseq
