--- a/package.yaml
+++ b/package.yaml
@@ -1,10 +1,10 @@
 name:                mle-ue2
 version:             0.1.0.0
-github:              "Github username here/mle-ue2"
+github:              "dkudernatsch/mle-ue2-haskell"
 license:             BSD3
-author:              "Author name here"
-maintainer:          "Author email here"
-copyright:           "2018 Author name here"
+author:              "Daniel Kudernatsch"
+maintainer:          ""
+copyright:           "2019 Daniel Kudernatsch"
 
 extra-source-files:
 - README.md
@@ -17,7 +17,7 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/Github username here/mle-ue2#readme>
+description:         Knn classifier using Kfold cross validation
 
 dependencies:
 - base >= 4.7 && < 5
